# fpv-computer-vision-api

./: .gitignore  Cargo.toml  README.md  dataset_collection.py  index.html  main.rs  train.rs  trainer.py  yolo.rs
data/: config.json
dataset/: data.yaml
dataset/test/combatant/: 1100.txt  1200-1872902078.txt  JvjxNKOoZgiZmiuvoWKbZG4MNnQeI3LJJvpHM2Dkse4-1309889384.txt  RGF_Light_Anti_Tank.txt  RGF_Rifleman_v10.txt  Squad-Russian-Ground-Forces-1024x576-28463122.txt  Squad_Russian_Soldiers_1.txt  Squad_Russian_Soldiers_2.txt  Squad_Russian_Soldiers_3.txt  Squad_Russian_Soldiers_4.txt  Squad_Russian_Soldiers_5.txt  Squad_Russian_Soldiers_6.txt  Squad_Russian_Soldiers_7.txt  maxresdefault-1626346529.txt  militia_1-2054810217.txt  nsv_2-1397287902.txt  russians_1-3054017200.txt  russians_1-4152672065.txt  russians_2-2787214758.txt
dataset/valid/: labels.cache
labels/: labels.json
src/: main.rs  temp.rs
