[package]
name = "fpv-computer-vision-api"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
image = "0.25.1"
rocket = "0.5.0"
round = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencv = "0.92.0"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json"]

[[bin]]
name = "fpv-computer-vision-api"
path = "main.rs"
